--- a/.classpath
+++ b/.classpath
@@ -7,12 +7,16 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/Korpus-Common.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/Korpus-Common.jar"/>
 	<classpathentry kind="lib" path="lib/jaxb/istack-commons-runtime-3.0.12.jar"/>
 	<classpathentry kind="lib" path="lib/jaxb/jakarta.activation-1.2.2.jar"/>
 	<classpathentry kind="lib" path="lib/jaxb/jakarta.xml.bind-api-2.3.3.jar"/>
 	<classpathentry kind="lib" path="lib/jaxb/jaxb-runtime-2.3.5.jar"/>
 	<classpathentry kind="lib" path="lib/jaxb/txw2-2.3.5.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
+	<classpathentry kind="lib" path="lib/kryo/kryo-3.0.3.jar"/>
+	<classpathentry kind="lib" path="lib/kryo/objenesis-2.1.jar"/>
+	<classpathentry kind="lib" path="lib/kryo/minlog-1.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/kryo/reflectasm-1.10.1-shaded.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
