--- a/.classpath
+++ b/.classpath
@@ -7,7 +7,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="lib/Korpus-Common.jar"/>
 	<classpathentry kind="lib" path="lib/jaxb/istack-commons-runtime-3.0.12.jar"/>
 	<classpathentry kind="lib" path="lib/jaxb/jakarta.activation-1.2.2.jar"/>
 	<classpathentry kind="lib" path="lib/jaxb/jakarta.xml.bind-api-2.3.3.jar"/>
@@ -18,5 +17,7 @@
 	<classpathentry kind="lib" path="lib/kryo/objenesis-2.1.jar"/>
 	<classpathentry kind="lib" path="lib/kryo/minlog-1.3.0.jar"/>
 	<classpathentry kind="lib" path="lib/kryo/reflectasm-1.10.1-shaded.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/GrammarDB.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/Korpus-Common.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
