--- a/build.xml
+++ b/build.xml
@@ -7,7 +7,7 @@
 
 	<target name="build">
 		<mkdir dir="build/classes" />
-		<javac srcdir="src" encoding="utf-8" destdir="build/classes">
+		<javac srcdir="src" encoding="utf-8" destdir="build/classes" debug="true" debuglevel="lines,vars,source">
 			<classpath>
 				<fileset dir="lib" includes="**/*.jar" />
 			</classpath>
