--- a/.classpath
+++ b/.classpath
@@ -13,10 +13,10 @@
 	<classpathentry kind="lib" path="lib/jaxb/jaxb-runtime-2.3.5.jar"/>
 	<classpathentry kind="lib" path="lib/jaxb/txw2-2.3.5.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
-	<classpathentry exported="true" kind="lib" path="lib/linguistics.grammardb.reader-1.2.0.jar"/>
 	<classpathentry kind="lib" path="lib-tests/byte-buddy-1.17.5.jar"/>
 	<classpathentry kind="lib" path="lib-tests/byte-buddy-agent-1.17.5.jar"/>
 	<classpathentry kind="lib" path="lib-tests/mockito-core-5.17.0.jar"/>
 	<classpathentry kind="lib" path="lib-tests/mockito-junit-jupiter-5.17.0.jar"/>
+	<classpathentry kind="lib" path="lib/linguistics.grammardb.reader-1.3.0.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
