--- a/.classpath
+++ b/.classpath
@@ -17,6 +17,6 @@
 	<classpathentry kind="lib" path="lib-tests/byte-buddy-agent-1.17.5.jar"/>
 	<classpathentry kind="lib" path="lib-tests/mockito-core-5.17.0.jar"/>
 	<classpathentry kind="lib" path="lib-tests/mockito-junit-jupiter-5.17.0.jar"/>
-	<classpathentry kind="lib" path="lib/linguistics.grammardb.reader-1.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/linguistics.grammardb.reader-1.4.0.jar" sourcepath="/linguistics.grammardb.reader"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
